# create2-salt-miner

./: .gitignore  Cargo.toml  README.md  salty.toml
src/: core.rs  display.rs  lib.rs  main.rs  miner.rs  wasm.rs
src/kernels/: keccak256.cl
web/: index.html  main.js  styles.css  worker.js
