[package]
  authors = [ "Akshat Mittal <hi@akshatmittal.com>" ]
  edition = "2021"
  name = "salty"
  version = "0.1.0"

[dependencies]
  alloy-primitives = { version = "0.6.2", features = [ "rand" ] }
  clap = { version = "4.4.18", features = [ "derive" ] }
  console = { version = "0.15.8", optional = true }
  figment = { version = "0.10.14", features = [ "toml" ] }
  indicatif = { version = "0.17.7", optional = true }
  ocl = { version = "0.19.6", optional = true }
  rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
  rand_chacha = "0.3.1"
  serde = { version = "1.0.196", features = [ "derive" ] }
  serde-wasm-bindgen = "0.6.5"
  wasm-bindgen = "0.2.92"
  getrandom = { version = "0.2.15", features = [ "js" ] }

[features]
  default = [ "cli" ]
  cli = [ "ocl", "console", "indicatif" ]
  wasm = [  ]

[profile.release]
  opt-level = 3
  lto = "fat"
  strip = true
  panic = "abort"
  codegen-units = 1

[package.metadata.wasm-pack.profile.release]
  wasm-opt = false

[lib]
  crate-type = [ "cdylib", "rlib" ]
